--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                              http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>org.sameersingh.utils</groupId>
-    <artifactId>utils</artifactId>
-    <packaging>pom</packaging>
-    <version>0.1</version>
-    <name>Bunch of utility packages</name>
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>org.sameersingh.utils</groupId>
+  <artifactId>utils</artifactId>
+  <packaging>pom</packaging>
+  <version>0.1.1-SNAPSHOT</version>
+  <name>Bunch of utility packages</name>
 
   <properties>
     <maven.compiler.source>1.5</maven.compiler.source>
@@ -23,7 +23,7 @@
     <module>cmdopts</module>
     <module>coref</module>
   </modules>
-  
+
   <repositories>
     <repository>
       <id>scala-tools.org</id>
