added source and test directories

--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,8 @@
   </distributionManagement>
 
   <build>
+    <sourceDirectory>src/main/scala</sourceDirectory>
+    <testSourceDirectory>src/test/scala</testSourceDirectory>
     <plugins>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
