--- a/misc/pom.xml
+++ b/misc/pom.xml
@@ -12,9 +12,9 @@
 
 <dependencies>
   <dependency>
-    <groupId>${parent.groupId}</groupId>
+    <groupId>${project.parent.groupId}</groupId>
     <artifactId>timing</artifactId>
-    <version>${parent.version}</version>
+    <version>${project.parent.version}</version>
   </dependency>
 </dependencies>
 
