--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <groupId>org.sameersingh.utils</groupId>
   <artifactId>utils</artifactId>
   <packaging>pom</packaging>
-  <version>0.1.1-SNAPSHOT</version>
+  <version>0.1.1-DEFT-03-31-2013</version>
   <name>Bunch of utility packages</name>
 
   <properties>
