--- a/coref/pom.xml
+++ b/coref/pom.xml
@@ -11,7 +11,7 @@
   <packaging>jar</packaging>
 
   <properties>
-    <factorie.version>1.0-SNAPSHOT</factorie.version>
+    <factorie.version>1.0.0-M4</factorie.version>
   </properties>
 
   <repositories>
