--- a/misc/pom.xml
+++ b/misc/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.sameersingh.utils</groupId>
     <artifactId>utils</artifactId>
-    <version>0.1.1-SNAPSHOT</version>
+    <version>0.1.1</version>
   </parent>
   <artifactId>misc</artifactId>
   <name>${project.artifactId}</name>
