--- a/misc/pom.xml
+++ b/misc/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.sameersingh.utils</groupId>
     <artifactId>utils</artifactId>
-    <version>0.1.1</version>
+    <version>0.2-SNAPSHOT</version>
   </parent>
   <artifactId>misc</artifactId>
   <name>${project.artifactId}</name>
@@ -15,6 +15,18 @@
     <groupId>${project.parent.groupId}</groupId>
     <artifactId>timing</artifactId>
     <version>${project.parent.version}</version>
+  </dependency>
+  <!-- Jackson -->
+  <dependency>
+    <groupId>com.fasterxml.jackson.module</groupId>
+    <artifactId>jackson-module-scala_2.10</artifactId>
+    <version>2.2.3</version>
+  </dependency>
+
+  <dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>2.2.2</version>
   </dependency>
 </dependencies>
 
